--- a/nginx.conf
+++ b/nginx.conf
@@ -43,7 +43,12 @@ http {
     server {
         #监听端口
         listen       80;
-        #使用 localhost 访问
+        # nginx 根据 server_name 匹配 HTTP 请求头的 host，去决定使用那个 server
+        # 所有 server_name 都匹配不到就使用 default_server
+        # 没有 default_server 使用第一个 server
+        # 只有一个 server 的情况下不区分
+        # 没有 server_name 就只能在一个端口建立一个 server
+        # 支持正则表达式配置多站点
         server_name  localhost;
         proxy_connect_timeout 10;
         proxy_read_timeout 150;
